<resources>
    <string name="app_name">Tap and Memorize</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="reiniciar">Reiniciar</string>
    <string name="progresso">Progresso:</string>
    <string name="win_screen_title">Pontuações</string>
    <string name="duracao_inicial">00:00</string>
    <string name="forneca_nome_jogador">\nPontuação: %d \nTempo: %s\n\nNome do jogador:\n</string>
    <string name="forneca_nome_jogador_title">Registrar Pontuação</string>
    <string name="salvar">Salvar</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_testetab">testetab</string>
</resources>
